[package]
name = "config-better"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
description = "Configure your application in a friendlier and more consistent way!"
homepage = "https://github.com/kade-robertson/config-better-rs"
repository = "https://github.com/kade-robertson/config-better-rs"
readme = "README.md"
keywords = ["config-better", "config", "xdg"]
categories = ["config", "filesystem"]

[dependencies]
thiserror = "1.0.44"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rand = "0.8.4"
temp-env = "0.3.4"