[package]
name = "config-better"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
description = "Configure your application in a friendlier and more consistent way!"
homepage = "https://github.com/kade-robertson/config-better-rs"
repository = "https://github.com/kade-robertson/config-better-rs"
readme = "README.md"
keywords = ["config-better", "config", "xdg"]
categories = ["config", "filesystem"]

[dependencies]
tokio = { version = "1.31.0", optional = true, features = ["fs"] }
thiserror = "1.0.44"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio = { version = "1.31.0", features = ["fs", "macros", "rt"] }
rand = "0.8.4"
temp-env = "0.3.4"
tokio-test = "0.4.2"

[features]
default = ["sync"]
sync = []
async = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]