[package]
name = "config-better"
version = "1.3.0"
edition = "2021"
rust-version = "1.63"
license = "MIT"
description = "Configure your application in a friendlier and more consistent way!"
homepage = "https://github.com/kade-robertson/config-better-rs"
repository = "https://github.com/kade-robertson/config-better-rs"
readme = "README.md"
keywords = ["config-better", "config", "xdg"]
categories = ["config", "filesystem"]

[dependencies]
tokio = { version = "1.31.0", optional = true, features = ["fs"] }
async-std = { version = "1.12.0", optional = true }
thiserror = ">=1.0,<3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
async-std = "1.12.0"
async-stream = "=0.3.5"
rand = "0.8.4"
temp-env = "0.3.4"
tokio = { version = "1.31.0", features = ["fs", "macros", "rt"] }
tokio-macros = "=2.3.0"
tokio-stream = "=0.1.16"
tokio-test = "0.4.2"

[features]
default = ["sync"]
sync = []
async = ["async-std"]
async-tokio = ["tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]